tests/cases/compiler-development/artifact/errors/diagnostic-generic-return-context-uninferred.diagnostic
diagnostic error code=ari/compiler family=general message="generic type 'T' could not be inferred for 'make_value'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-return-context-uninferred.ari" display="tests/cases/generics/errors/generic-return-context-uninferred.ari" bytes=111
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-return-context-uninferred.ari" line=6 column=20 end_line=6 end_column=30 byte_start=79 byte_end=89 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-return-context-uninferred.ari:6:20\n   |\n 6 |   let value: i64 = make_value();\n   |                    ^^^^^^^^^^"
